fix bug 265503 - firefox bookmark importing fixes. sr=pinkerton